--- a/pages/index.html
+++ b/pages/index.html
@@ -31,15 +31,31 @@
       <span data-ty="input" data-ty-prompt="▲">cd ~/links</span>
       <span data-ty
         >Follow me on
-        <a href="https://github.com/mkayaaksoy" target="on_blank">Github</a>
-        <a href="https://www.linkedin.com/in/muratkayaaksoy/" target="on_blank"
+        <a
+          href="https://github.com/mkayaaksoy"
+          target="on_blank"
+          style="color: white;"
+          >Github</a
+        >
+        <a
+          href="https://www.linkedin.com/in/muratkayaaksoy/"
+          target="on_blank"
+          style="color: white;"
           >Linkedin</a
         >
-        <a href="https://twitter.com/muratkayaaksoy" target="on_blank"
+        <a
+          href="https://twitter.com/muratkayaaksoy"
+          target="on_blank"
+          style="color: white;"
           >Twitter</a
         >
         or here's my
-        <a href="docs/Murat_Kaya_Aksoy_F.pdf" target="on_blank">resume</a>
+        <a
+          href="docs/Murat_Kaya_Aksoy_F.pdf"
+          target="on_blank"
+          style="color: white;"
+          >resume</a
+        >
       </span>
     </div>
     <script src="js/termynal.js" data-termynal-container="#termynal"></script>
