--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    
     <title>Murat Kaya Aksoy | Software Engineer</title>
     <link rel="stylesheet" href="css/termynal.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -50,12 +52,7 @@
           >Twitter</a
         >
         or here's my
-        <a
-          href="docs/Murat_Kaya_Aksoy_F.pdf"
-          target="on_blank"
-          style="color: white;"
-          >resume</a
-        >
+        <a href="mailto:aksoymuratkaya@gmail.com" style="color: white;">mail</a>
       </span>
     </div>
     <script src="js/termynal.js" data-termynal-container="#termynal"></script>
