--- a/pages/index.html
+++ b/pages/index.html
@@ -2,7 +2,19 @@
 <html>
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-100425011-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-100425011-2");
+    </script>
     <title>Murat Kaya Aksoy | Software Engineer</title>
     <link rel="stylesheet" href="css/termynal.css" />
     <link rel="stylesheet" href="css/main.css" />
@@ -29,6 +41,7 @@
       >
       <span data-ty="input" data-ty-prompt="▲">I'm a Java Developer.</span>
       <span data-ty="input" data-ty-prompt="▲">I can speak NodeJS.</span>
+      <span data-ty="input" data-ty-prompt="▲">I like javascript.</span>
       <span data-ty="input" data-ty-prompt="▲">I enjoy rock music.</span>
       <span data-ty="input" data-ty-prompt="▲">cd ~/links</span>
       <span data-ty
