--- a/pages/index.html
+++ b/pages/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     
-    <title>Murat Kaya Aksoy | Software Engineer</title>
+    <title>Murat Kaya Aksoy | Software Engineer |</title>
     <link rel="stylesheet" href="css/termynal.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
